Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.7-dev
---------------

Not yet released.

- Added ``exclude_columns`` keyword argument to :meth:`APIManager.create_api`.
- Fixed `issue #101 <https://github.com/jfinkels/flask-restless/issues/101>`_:
  ``exclude`` in :func:`views._to_dict` function now correctly excludes
  requested fields from the returned dictionary.
- Added working ``include`` and ``exclude`` functionality to the
  :func:`views._to_dict` function.
- Fixed `issue #98 <https://github.com/jfinkels/flask-restless/issues/98>`_:
  :http:method:`get` requests to the function evaluation endpoint should not
  have a data payload.
- Added a ``total_pages`` mapping to the JSON response according to
  `pull request #93
  <https://github.com/jfinkels/flask-restless/pull/93>`_.
- Fixed `issue #91 <https://github.com/jfinkels/flask-restless/issues/91>`_:
  correctly handle :http:method:`post` requests to nullable
  :class:`~sqlalchemy.DateTime` columns.
- Fixed `issue #83 <https://github.com/jfinkels/flask-restless/issues/83>`_:
  allow :http:method:`post` requests with one-to-one related instances.
- Fixed `issue #79 <https://github.com/jfinkels/flask-restless/issues/79>`_:
  attempted to access attribute of ``None`` in constructor of
  :class:`APIManager`.

Version 0.6
-----------

Released on June 20, 2012.

- Added ``post_form_preprocessor`` keyword argument to
  :meth:`APIManager.create_api`; see `issue #74
  <https://github.com/jfinkels/flask-restless/pull/74>`_.
- Fixed `issue #77 <https://github.com/jfinkels/flask-restless/pull/77>`_:
  validation errors are now correctly handled on :http:method:`PATCH` requests.
- Added support for accessing model instances via arbitrary primary keys,
  instead of requiring an integer column named ``id``.