@@ -169,6 +169,8 @@ evaluation of functions on all instances the model.
 For information about the request and response formats for this endpoint, see
 :ref:`functionevaluation`.
 
+.. _includes:
+
 Specifying which columns are provided in responses
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -178,7 +180,7 @@ with those names (that is, the strings represent the names of attributes of the
 model which are ``Column`` objects) will be provided in JSON responses for
 :http:method:`get` requests.
 
-For example, if your model is defined like this (using Flask-SQLAlchemy)::
+For example, if your models are defined like this (using Flask-SQLAlchemy)::
 
     class Person(db.Model):
         id = db.Column(db.Integer, primary_key=True)
@@ -204,11 +206,41 @@ For example::
 
     apimanager.create_api(Person, exclude_columns=['name', 'birth_date'])
 
-will produce responses like::
+will produce responses like:
 
 .. sourcecode:: javascript
 
    {"id": 1, "computers": [{"id": 1, "vendor": "Apple", "model": "MacBook"}]}
+
+In this example, the ``Person`` model has a one-to-many relationship with the
+``Computer`` model. To specify which columns on the related models will be
+included or excluded, include a string of the form ``'<relation>.<column>'``,
+where ``<relation>`` is the name of the relationship attribute of the model and
+``<column>`` is the name of the column on the related model which you want to
+be included or excluded. For example::
+
+    includes = ['name', 'birth_date', 'computers', 'computers.vendor']
+    apimanager.create_api(Person, include_columns=includes)
+
+will produce responses like:
+
+.. sourcecode:: javascript
+
+   {
+     "name": "Jeffrey",
+     "birth_date": "1999-12-31",
+     "computers": [{"vendor": "Apple"}]
+   }
+
+An attempt to include a field on a related model without including the
+relationship field has no effect::
+
+    includes = ['name', 'birth_date', 'computers.vendor']
+    apimanager.create_api(Person, include_columns=includes)
+
+.. sourcecode:: javascript
+
+   {"name": "Jeffrey", "birth_date": "1999-12-31"}
 
 .. _authentication:
 
